Issues with horizontal scrolling should be fixed

--- a/src/styles/new_main_design/newaboutstyle.css
+++ b/src/styles/new_main_design/newaboutstyle.css
@@ -132,3 +132,9 @@
     width: fit-content;
   }
 }
+
+@media (min-width: 964px) {
+  .newSection.About {
+    width: 50vw;
+  }
+}
