--- a/src/styles/new_main_design/newcontactme.css
+++ b/src/styles/new_main_design/newcontactme.css
@@ -10,10 +10,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .contactBlurb.new {
   font-size: 1.5rem;
+  width: 60vw;
+  text-align: center;
 }
 
 .newContactIcon {
